--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "nurseries-front",
+  "name": "react-boilerplate",
   "version": "1.0.0",
-  "description": "Dashboard to generate nurseries reports",
+  "description": "General React project boilerplate",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
     "build:dev": "webpack-dev-server --mode development --open",
+    "lint": "eslint src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Marcial Puchi",
   "license": "ISC",
   "dependencies": {
     "lodash": "^4.17.5",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -22,7 +25,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.10",
-    "eslint": "^4.18.1",
+    "eslint": "^4.19.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
@@ -32,8 +35,6 @@
     "html-webpack-plugin": "^3.0.6",
     "image-webpack-loader": "^4.1.0",
     "node-sass": "^4.7.2",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
