--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "General React project boilerplate",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode production",
+    "build": "webpack --mode production --display-error-details",
     "build:dev": "webpack-dev-server --mode development --open",
-    "lint": "eslint src",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint src"
   },
   "author": "Marcial Puchi",
   "license": "ISC",
